--- a/languages/smart-blocks.pot
+++ b/languages/smart-blocks.pot
@@ -2,20 +2,20 @@
 # This file is distributed under the GPLv2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Smart Blocks 1.0.0\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/hash-gutenberg\n"
+"Project-Id-Version: Smart Blocks - Wordpress Gutenberg Blocks 1.0.2\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/smart-blocks\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2022-06-24T08:57:02+02:00\n"
+"POT-Creation-Date: 2022-07-17T07:02:05+02:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.6.0\n"
 "X-Domain: smart-blocks\n"
 
 #. Plugin Name of the plugin
-msgid "Smart Blocks"
+msgid "Smart Blocks - Wordpress Gutenberg Blocks"
 msgstr ""
 
 #. Description of the plugin
