--- a/languages/smart-blocks.pot
+++ b/languages/smart-blocks.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the GPLv2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Smart Blocks - Wordpress Gutenberg Blocks 1.0.2\n"
+"Project-Id-Version: Smart Blocks - WordPress Gutenberg Blocks 1.0.2\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/smart-blocks\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15,7 +15,7 @@ msgstr ""
 "X-Domain: smart-blocks\n"
 
 #. Plugin Name of the plugin
-msgid "Smart Blocks - Wordpress Gutenberg Blocks"
+msgid "Smart Blocks - WordPress Gutenberg Blocks"
 msgstr ""
 
 #. Description of the plugin
